# SPIRT_RECOMENDER_MVP

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  LLM-based Structured Product Parser.docx  README.md  docker-compose.yml  llm_module.py  new_prompt.txt  pyproject.toml  test.ipynb  test_agent.ipynb  test_agent_profile.ipynb  test_large.ipynb
data/catalog/: catalog_summary.json  cocktail_catalog_summary.json
data/indexes/: product.faiss  product_faiss_metadata.json
data/parsed_cocktails/: bacardi_cocktail_crawl_summary.json  www-bacardi-com-rum-cocktails-bacardi-and-cola.json  www-bacardi-com-rum-cocktails-blood-moon.json  www-bacardi-com-rum-cocktails-coconut-and-pineapple.json  www-bacardi-com-rum-cocktails-coconut-mismo.json  (+39 more)
docs/: agent_prompts.md  architecture.md  current_pipeline.md  feedback_analytics.md  followup_context.md  memory_model.md  project_map.md  sqlite_migration.md  tool_contracts.md
notebooks/: context_followup_testing.ipynb  dialog_testing.ipynb
scripts/: agent_chat_cli.py
sommelier/: config.py
tests/: test_agent_memory.py  test_agent_routing.py  test_bacardi_ingestion.py  test_bm25_retrieval.py  test_catalog_schemas.py  test_cocktail_ingestion.py  test_cocktail_profiles.py  test_cocktail_search.py  test_dialog_scenario.py  test_feedback.py  test_food_pairing_query.py  test_llm_product_parser.py  test_minimal_agent_graph.py  test_profile_updates.py  test_ranker.py  test_search_profiles.py  test_sqlite_repository.py  test_tag_vocabulary.py  test_target_agent.py  test_vector_retrieval.py  test_web_api.py
(+272 files in other folders)
