[project]
name = "ai-sommelier-assistant"
version = "0.1.0"
description = "Controlled AI sommelier assistant for rum recommendations."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "fastapi>=0.110",
  "httpx>=0.27",
  "langchain-openai>=0.2",
  "langgraph>=0.2",
  "openai>=1.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
vector = [
  "faiss-cpu>=1.8",
]
test = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sommelier*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
